Cambios en about y skills

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<h3 class="text-white">{{'about' | translate}}</h3>
+
+<div class="container text-white">
+    <div class="row">
+    <div class="col-sm-9">
+           <p class="text-justify">{{'about.p1' | translate}}</p>
+           <p class="text-justify">{{'about.p2' | translate}}</p>
+           <p class="text-justify">{{'about.p3' | translate}}</p>
+           <p class="text-justify">{{'about.p4' | translate}}</p>
+   </div>
+   <div class="col-sm-3">
+       <img src="../../../assets/img/user.jpg" class="rounded border border-white img-fluid" />
+    </div>
+    </div>
+  </div>
