--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,13 @@
-<h3 class="text-white">Hello World</h3>
+<h3 class="text-white">{{'home.hello' | translate}}</h3>
 <div class="container text-white">
         <div class="row">
-        <div class="col-sm">
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut varius ipsum. Sed vulputate urna sit amet posuere lobortis. Nulla facilisi. Praesent sit amet quam non ante facilisis auctor. Donec bibendum nunc id elit laoreet, quis bibendum tortor lobortis. Integer lacinia nisl in tristique tincidunt. Donec et urna in nunc lacinia porta vel in felis. Nunc ac elit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum pellentesque tortor vitae elementum. Suspendisse potenti.
-               </p>
-                <p>Donec tellus est, vulputate eget elit at, cursus suscipit lacus. Curabitur dictum massa sed urna maximus scelerisque. Quisque nec laoreet tellus. Etiam nisi massa, dictum id sagittis blandit, fringilla sed nibh. Donec id urna ipsum. Sed orci nisi, convallis a magna sed, commodo aliquet lacus. Etiam risus magna, consectetur ut nunc ac, auctor cursus tellus. Pellentesque suscipit tellus vitae augue aliquam, nec laoreet nisi placerat. Praesent vel accumsan ex, nec finibus arcu. Etiam ultrices mauris ut urna imperdiet maximus. Phasellus et semper lacus, eget dictum dolor. Ut viverra turpis sit amet eros ullamcorper dictum.
-                </p>
-                <p> Suspendisse eget quam lacinia augue ultrices rutrum. Pellentesque ullamcorper magna lectus. Vestibulum id imperdiet sem. Nullam viverra luctus nibh, sit amet consequat enim dictum vel. Nam maximus finibus metus at tincidunt. Proin felis nisl, gravida non pulvinar a, condimentum vel urna. Curabitur vitae vestibulum justo. Nulla tincidunt venenatis est. Nulla in lectus tellus. Vestibulum id sem neque. Morbi quis tempor nibh, a vulputate justo. Nunc enim felis, consequat ac sapien sed, ullamcorper varius diam.
-                </p>
+        <div class="col-sm-9">
+               <p class="text-justify">{{'home.p1' | translate}}</p>
+               <p class="text-justify">{{'home.p2' | translate}}</p>
+               <p class="text-justify">{{'home.p3' | translate}}</p>
+               <p class="text-justify">{{'home.p4' | translate}}</p>
        </div>
-        <div class="col-sm">
+        <div class="col-sm-3">
                 <fa [name]="'address-card'" [size]=1 class="m-2 align-middle"></fa>Álvaro Romero Ayala<br>
                 <fa [name]="'phone'" [size]=1 class="m-2 align-middle"></fa>+34-676871087<br>
                 <fa [name]="'envelope-open'" [size]=1 class="m-2 align-middle"></fa>sarebok@gmail.com <br>
