--- a/src/app/components/foot-bar/foot-bar.component.html
+++ b/src/app/components/foot-bar/foot-bar.component.html
@@ -5,6 +5,7 @@
         <a href="https://es.linkedin.com/in/%C3%A1lvaro-romero-ayala-82226412b"><fa [name]="'linkedin'" [size]=2 class="m-2"></fa></a>
         <a href="www.twitter.com/sarebok"><fa [name]="'twitter'" [size]=2 class="m-2" ></fa></a>
         <a href="www.twitter.com/sarebok85"><fa [name]="'instagram'" [size]=2 class="m-2"></fa></a>
+        <a href="https://github.com/Sarebok85"><fa [name]="'github'" [size]=2 class="m-2"></fa></a>
      </div>
  </div>
 </footer>
