--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -6,24 +6,24 @@
          <span class="navbar-toggler-icon"></span>
     </button>
    <div class="collapse navbar-collapse" id="navbarText" [ngClass]="{ 'show': toggleNavbar }">
-      <fa [name]="'graduation-cap'" [size]=2 class="m-2 align-middle text-white"></fa>
+      <!-- <fa [name]="'graduation-cap'" [size]=2 class="m-2 align-middle text-white" *ngIf="showIcon()"></fa> -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active">{{ 'home' | translate }}</a>
+          <a class="nav-link" (click)="toggleNavbar = !toggleNavbar" routerLink="/home" routerLinkActive="active">{{ 'home' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/skills" routerLinkActive="active">{{ 'skills' | translate }}</a>
+          <a class="nav-link"  (click)="toggleNavbar = !toggleNavbar" routerLink="/skills" routerLinkActive="active">{{ 'skills' | translate }}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/contact" routerLinkActive="active">{{ 'contact' | translate }}</a>
+            <a class="nav-link"  (click)="toggleNavbar = !toggleNavbar" routerLink="/contact" routerLinkActive="active">{{ 'contact' | translate }}</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="active">{{ 'about' | translate }}</a>
+          <a class="nav-link"  (click)="toggleNavbar = !toggleNavbar" routerLink="/about" routerLinkActive="active">{{ 'about' | translate }}</a>
         </li>
       </ul>
       <span class="navbar-text">
-        Álvaro Romero Ayala (<a  (click)="cambiarLenguaje('es')">{{'es' | translate}}</a> - 
-        <a (click)="cambiarLenguaje('en')">{{'en' | translate}}</a>)
+        <a  (click)="cambiarLenguaje('es')">{{'es' | translate}}</a> - 
+        <a (click)="cambiarLenguaje('en')">{{'en' | translate}}</a>
       </span>
     </div>
   </nav>
