--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -3,23 +3,26 @@
 <div class="container text-white">
     <div class="row">
       <div class="col-sm">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut varius ipsum. Sed vulputate urna sit amet posuere lobortis. Nulla facilisi. Praesent sit amet quam non ante facilisis auctor. Donec bibendum nunc id elit laoreet, quis bibendum tortor lobortis. Integer lacinia nisl in tristique tincidunt. Donec et urna in nunc lacinia porta vel in felis. Nunc ac elit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum pellentesque tortor vitae elementum. Suspendisse potenti.
-      </div>
+            <p class="text-justify">{{'skills.front' | translate }}</p>
+    </div>
       <div class="col-sm">
         <div class="progress">
-            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">HTML5</span></div>
         </div>
         <div class="progress">
-            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 41%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">JAVASCRIPT</span></div>
         </div>
         <div class="progress">
-            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 23%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">JQUERY</span></div>
         </div>
         <div class="progress">
-            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">ANGULAR2</span></div>
         </div>
         <div class="progress">
-            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">REACT</span></div>
+        </div>
+        <div class="progress">
+            <div class="progress-bar-striped bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">CSS</span></div>
         </div>
       </div>
     </div>
@@ -30,23 +33,17 @@
   <div class="container text-white">
       <div class="row">
         <div class="col-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut varius ipsum. Sed vulputate urna sit amet posuere lobortis. Nulla facilisi. Praesent sit amet quam non ante facilisis auctor. Donec bibendum nunc id elit laoreet, quis bibendum tortor lobortis. Integer lacinia nisl in tristique tincidunt. Donec et urna in nunc lacinia porta vel in felis. Nunc ac elit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum pellentesque tortor vitae elementum. Suspendisse potenti.
+            <p class="text-justify">{{'skills.back' | translate }}</p>        
         </div>
         <div class="col-sm">
           <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+              <div class="progress-bar-striped bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">JAVA / SPRING (FW) (BOOT) / JPA</span></div>
           </div>
           <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 41%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+              <div class="progress-bar-striped bg-success font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">.NET CORE + EF</span></div>
           </div>
           <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 23%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
-          </div>
-          <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
-          </div>
-          <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+              <div class="progress-bar-striped bg-success font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">NODE JS</span></div>
           </div>
         </div>
       </div>
@@ -57,23 +54,17 @@
     <div class="container text-white">
         <div class="row">
           <div class="col-sm">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut varius ipsum. Sed vulputate urna sit amet posuere lobortis. Nulla facilisi. Praesent sit amet quam non ante facilisis auctor. Donec bibendum nunc id elit laoreet, quis bibendum tortor lobortis. Integer lacinia nisl in tristique tincidunt. Donec et urna in nunc lacinia porta vel in felis. Nunc ac elit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum pellentesque tortor vitae elementum. Suspendisse potenti.
-          </div>
+            <p class="text-justify">{{'skills.others' | translate }}</p>              
+        </div>
           <div class="col-sm">
             <div class="progress">
-                <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+                <div class="progress-bar-striped bg-danger font-weight-bold" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">GESTION DE EQUIPOS</span></div>
             </div>
             <div class="progress">
-                <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 41%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+                <div class="progress-bar-striped bg-danger font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">SCRUM</span></div>
             </div>
             <div class="progress">
-                <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 23%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
-            </div>
-            <div class="progress">
-                <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
-            </div>
-            <div class="progress">
-                <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">TECH1</span></div>
+                <div class="progress-bar-striped bg-danger font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span class="text-left ml-1">KANBAN</span></div>
             </div>
           </div>
         </div>
