--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,17 @@
 <h3 class="text-white">{{'home.hello' | translate}}</h3>
 <div class="container text-white">
         <div class="row">
-        <div class="col-sm-9">
+        <div class="col-sm-12">
                <p class="text-justify">{{'home.p1' | translate}}</p>
                <p class="text-justify">{{'home.p2' | translate}}</p>
                <p class="text-justify">{{'home.p3' | translate}}</p>
                <p class="text-justify">{{'home.p4' | translate}}</p>
        </div>
-        <div class="col-sm-3">
+        <!-- <div class="col-sm-3">
                 <fa [name]="'address-card'" [size]=1 class="m-2 align-middle"></fa>Álvaro Romero Ayala<br>
                 <fa [name]="'phone'" [size]=1 class="m-2 align-middle"></fa>+34-676871087<br>
                 <fa [name]="'envelope-open'" [size]=1 class="m-2 align-middle"></fa>sarebok@gmail.com <br>
                 <fa [name]="'building'" [size]=1 class="m-2 align-middle"></fa>Murcia - Spain                
-        </div>
+        </div> -->
         </div>
       </div>
