change size card contact

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -43,8 +43,8 @@
       </form> -->
 <div class="row">
   <div class="col-md-12">
-  <div class="card center-form mt-4" style="width:25rem;">
-      <img class="card-img-top" src="../../../assets/img/user.jpg" alt="Card image cap">
+  <div class="card center-form mt-4" style="width:20rem;">
+      <img class="card-img-top" src="../../../assets/img/user.jpg">
       <div class="card-body">
         <p class="card-text">
                 <fa [name]="'address-card'" [size]=1 class="m-2 align-middle"></fa>Álvaro Romero Ayala<br>
